[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/menu/menu death/nothing.png" type="Texture" id=1]
[ext_resource path="res://assets/menu/menu death/restart_focus.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/menu death/restart_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/menu death/restart_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/exit_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/exit_focused.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/exit_pressed.png" type="Texture" id=7]
[ext_resource path="res://scripts/menu_death.gd" type="Script" id=8]
[ext_resource path="res://audio/sfx/menu_press_button.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/sfx/menu_switch_button.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "motion"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="menu_death" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -27.0
margin_top = -13.0
margin_right = 1348.0
margin_bottom = 739.0
rect_pivot_offset = Vector2( 1631, 128 )
color = Color( 0, 0, 0, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dead" type="Sprite" parent="CanvasLayer/ColorRect"]
position = Vector2( 656, 248 )
scale = Vector2( 0.726969, 0.398212 )
texture = ExtResource( 1 )

[node name="bt_restart" type="TextureButton" parent="CanvasLayer/ColorRect"]
margin_left = 300.0
margin_top = 558.0
margin_right = 904.0
margin_bottom = 669.0
rect_scale = Vector2( 0.48, 0.559999 )
focus_neighbour_left = NodePath("../bt_exit")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../bt_exit")
focus_neighbour_bottom = NodePath(".")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_exit" type="TextureButton" parent="CanvasLayer/ColorRect"]
margin_left = 837.0
margin_top = 552.0
margin_right = 1347.0
margin_bottom = 662.0
rect_scale = Vector2( 0.48, 0.559999 )
focus_neighbour_left = NodePath("../bt_restart")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../bt_restart")
focus_neighbour_bottom = NodePath("../bt_restart")
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effect_bt_pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="effect_bt_focused" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "motion"
anims/RESET = SubResource( 1 )
anims/motion = SubResource( 2 )

[connection signal="focus_entered" from="CanvasLayer/ColorRect/bt_restart" to="." method="_on_bt_restart_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ColorRect/bt_restart" to="." method="_on_bt_restart_pressed"]
[connection signal="focus_entered" from="CanvasLayer/ColorRect/bt_exit" to="." method="_on_bt_exit_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ColorRect/bt_exit" to="." method="_on_bt_exit_pressed"]
